Bugfix: Option menu hidden behind top of table (if there's only one option).

--- a/styles.css
+++ b/styles.css
@@ -188,3 +188,9 @@ tr.mod-booking-invisible {
 .wunderbyte-table-grid .list-group-item {
     border: 1px solid rgba(0, 0, 0, .125);
 }
+
+/* Fix a bug where menu was disappearing behind the top of the table
+if there only was one booking option. */
+#page.container-fluid #region-main div.no-overflow {
+    overflow: visible;
+}
